# CameraNative

./: README.md  local.properties
app/: CMakeLists.txt  build.gradle
app/src/main/cpp/: jni_connect.cpp
app/src/main/java/dev/k504/cameraenginendk/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
